--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@ngx-translate/core": "^14.0.0",
+    "mat-table-exporter": "^10.2.4",
     "ngx-material-timepicker": "^5.5.3",
     "ngx-translate": "github:ngx-translate/core",
     "rxjs": "~7.5.0",
